data/derived/sp14/progs/unify/prog1474.ml.out
Characters 35-38:
  let stringOfList f l = List.append "["::(sepConcat ";" (List.map (f) l)) "]";;
                                     ^^^
Error: This expression has type string but an expression was expected of type
         'a list
